# CMake_template_project

./: CMakeLists.txt  Readme.md  build_run.sh
src/: main.cpp  utils.cpp  utils.h
src/tests/: CMakeLists.txt  utils_tests.cpp
